--- a/app-options-page/components/stock/stockView.html
+++ b/app-options-page/components/stock/stockView.html
@@ -1,1 +1,2 @@
-huynhnhon
+<div id="grid1" ui-grid="options" ui-grid-selection ui-grid-edit ui-grid-pagination ui-grid-row-edit class="grid"></div>
+</div>
