--- a/app-options-page/components/export-detail/export.html
+++ b/app-options-page/components/export-detail/export.html
@@ -93,7 +93,7 @@
 </div>
 <div style="display: inline;position: fixed;bottom: 0px;right: 0px;z-index: 999; background: #fff">
     
-    <div class="panel-body">
+    <div class="panel-body noprint ">
         <button class="btn btn-success" ng-click="printEx()">IN PHIẾU</button>
     </div>
 </div>
