--- a/css/custom.css
+++ b/css/custom.css
@@ -12,6 +12,31 @@
   float: right
 }
 
+div.grid3 {
+  width: 485px;
+  height: 200px;
+}
+
+div.note {
+  padding: 10px;
+  margin-top: 25px;
+  border: #d9d9d9 solid 1px;
+  background: #f5f5f59e;
+  ;
+}
+
+select#selectStatus {
+  width: unset;
+  display: inline-block;
+  float: right;
+  height: 31px;
+  margin-right: 10px;
+}
+
+div.grid2 {
+  width: 670px;
+}
+
 span.glyphicon {
   cursor: pointer;
 }
@@ -705,11 +730,12 @@ button.removeClassify {
   min-width: 300px;
   border-radius: 4px;
 }
+
 .result div {
   margin: 10px;
 }
 
-.result > ul > div> span {
+.result>ul>div>span {
   background: #ddd;
   padding: 3px 5px;
 }
