--- a/app-options-page/components/print-ordershopee/printView.html
+++ b/app-options-page/components/print-ordershopee/printView.html
@@ -88,6 +88,16 @@
                 <table class="table table-bordered">
                     <tbody>
                         <tr>
+                            <td></td>
+                            <td title="shop bán">
+                                {{shop}}
+                            </td>
+                            <td title="Người đóng gói">
+                                {{packer}}
+                            </td>
+
+                        </tr>
+                        <tr>
                             <td title="Ngày đặt hàng">{{date}}</td>
                             <td title="Số điện thoại khách mua">+{{phone}}</td>
                             <td title="Mã vận đơn - Nhà vận chuyển">{{trackingNo}} - {{carrier}}</td>
