--- a/app-options-page/components/invoice/invoiceView.html
+++ b/app-options-page/components/invoice/invoiceView.html
@@ -10,7 +10,7 @@
                 <button ng-click="addShippingNo()" id="addShippingNo"><span class="glyphicon glyphicon-plus"></span>
                     Vận Đơn</button>
                 <span>Hàng: </span>
-                <input type="number" name="" id="" ng-model="sumPaid" ng-value="sumPaid" disabled> + Ship
+                <input type="number" name="" id="" ng-model="sumPaid" ng-value="sumPaid|number:2" disabled> + Ship
                 <input type="number" name="" id="" ng-model="shipping_fee" ng-value="shipping_fee"> -
                 <input type="number" name="" id="" ng-model="voucher" ng-value="voucher"> =
                 {{(sumPaid + shipping_fee - voucher)|number:2}}&yen; * {{currency_rate}} = {{(currency_rate*(sumPaid + shipping_fee -
@@ -18,7 +18,7 @@
                 <select ng-show="status !== 8" class="form-control" name="" id="selectStatus">
                     <!-- <option></option> -->
                     <!-- <option value="{{status}}">{{statusName}}</option> -->
-                    <option ng-repeat="i in arrayStatus" value="{{i.id}}" ng-class="{'full': i.id == 8}">{{i.name}}</option>
+                    <option ng-repeat="i in arrayStatus" value="{{i.id}}" ng-class="{'full': i.id == 8}" ng-selected="{{i.id}}==status" >{{i.name}}</option>
                 </select>
                 <button type="button" ng-click="updateDetail()" class="btn btn-success" id="invoiceUpdate" style="float: right;">UPDATE</button>
                 <!-- <h5 class="modal-title">{{traceNo}} <i style="color: #9e25da;" class="glyphicon glyphicon-send"></i></h5> -->
@@ -26,6 +26,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-5" style="padding-right: 0">
+                        <div class="invoiceId"><a href="https://trade.1688.com/order/new_step_order_detail.htm?orderId={{orderId}}" target="_blank">{{orderId}}</a></div>
                         <div ng-show="traceNo.length>0" id="grid3" ui-grid="optionsShipping" ui-grid-resize ui-grid-resize-columns
                             ui-grid-selection ui-grid-edit ui-grid-row-edit class="grid3"></div>
                         <div class="note">
