--- a/app-options-page/components/orders/ordersView.html
+++ b/app-options-page/components/orders/ordersView.html
@@ -165,6 +165,7 @@
     <ul ng-repeat="x in rowSelected" class="list-group" style="float: left;width: 50%; margin-bottom: 5px">
         <div style="display: inline-block; margin-right: 10px">
             <div id="{{x.id}}"></div>
+            
         </div>
         <div style="display: inline-block">
             <!-- <li class="list-group-item">
@@ -175,7 +176,7 @@
             <br>
             <li style="padding-bottom: 8px; list-style-type : none">
                 {{x.nickname}}
-                <br>{{x.name}} <span style="font-size: 10px">[{{x.lengthClassify}}]</span>
+                <br>{{x.name}}<span style="font-size: 10px">[{{x.lengthClassify}}] <span ng-show="x.packer !== ''">[{{x.packer}}]</span> </span>
             </li>
         </div>
 
